<resources>
    <string name="app_name">Aya.Nbarmjou</string>

    <string name="action_settings">Settings</string>
    <string name="login">Se connecter</string>
    <string name="register">S\'inscrire</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="register_title">Inscription</string>
    <string name="pseudo">Pseudo</string>
    <string name="email">Email</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="title_activity_premiere">PremiereActivity</string>
    <string name="logout">Log out</string>


    <string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="logout_text">Sign out</string>

    <string name="welcomeTexte">Welcome to the world of higher productivity levels, if you are an event planner , please
    mesmrise us with increadable opportunities , if you are our active freind , then feel free to search for suitable adventures </string>
    <string name="google_maps_api_key">AIzaSyDTZJo0xOQcDWp-mSWL_t0UR447L4JvOY8</string>
    <string name="stringchoice1">Would you tell me, please, which way I ought to go from here?</string>
    <string name="stringchoice2">That depends a good deal on where you want to get to</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <string name="slide_1_desc">Read others feedback and express yours </string>

    <string name="slide_2_title">Communicate</string>
    <string name="slide_2_desc">Message your contacts to discuss with them new adventures to live </string>

    <string name="slide_3_title">Build Communities</string>
    <string name="slide_3_desc">Communities of creative , productive and life livers </string>


    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_appeals_list">AppealsList</string>
    <string name="quest1">do you find our Event App useful ?</string>
    <string name="quest2">woud you suggest other features to improve our app , to costum your needs ?</string>
    <string name="quest3">On a scale of five , hwo can you rate our app ?</string>
    <string name="sponsoring"> Welcome to Event App , If you are a business owner , open to creative marketing strategies , you believe in win win opportunities , you can sponsor others events that may put you in direct contact with a potential target market ! </string>
    <string name="Setting">Settings</string>
    <string name="AnsweraSurvey">Answer a servey</string>
    <string name="insight">insights</string>
    <string name="ignore">Ignore</string>
    <string name="facebook_app_id">167162724005737</string>
    <string name="fb_login_protocol_scheme">fb167162724005737</string>
    <string name="appeal">make an appeal</string>
    <string name="introductionAppeals">Here you will find people interested in creating events for you , make an appeal to let them hear your voice.</string>
<string name="introductionCommittee">"You have an event budget, idea, plan ?  but you still need more engaged devoted committee with you to bring the event to life !\n Make an appeal "</string>
    <string name="agreement">This is not an official agreement and this application does not to be considered as a legal proof to garantee any side right\'s</string>
    <string name="event_status">event status</string>
    <string name="event_category">event category</string>

</resources>
